region+choose-section

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,4 +12,9 @@
 
 @import 'blocks/header';
 @import 'blocks/places';
+@import 'blocks/tour';
+@import 'blocks/region';
+@import 'slick';
+@import 'blocks/choose';
+
 
