z-index-for-pageup

--- a/sass/blocks/_pageup.scss
+++ b/sass/blocks/_pageup.scss
@@ -8,6 +8,7 @@
     height: 50px;
     background: #005399;
     border-radius: 25px;
+    z-index: 3737;
     img {
         display: block;
         margin: 0 auto;
